--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
-
 .border {
-    background-color: white;
+    background-color: rgb(243, 240, 240);
 }
 
 .data2 {
@@ -163,19 +162,121 @@
     font-size: 50px;
     height: 100px;
     width: 100px;
-    background-color: rgb(224, 224, 224); 
-    display: flex;align-items: center; justify-content: center;
+    background-color: rgb(224, 224, 224);
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-top: 25px;
     color: rgb(37, 37, 37);
 }
+
+.test2 i {
+    color: white;
+    background-color: rgb(243, 177, 55);
+    width: 25px;
+    height: 25px;
+
+}
+
 .cardimg2 i {
     border: 2px solid rgb(223, 222, 222);
     border-radius: 50%;
     font-size: 50px;
     height: 100px;
     width: 100px;
-    background-color: rgb(224, 224, 224); 
-    display: flex;align-items: center; justify-content: center;
+    background-color: rgb(224, 224, 224);
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-top: 25px;
     color: rgb(37, 37, 37);
+
+}
+
+.icon1 {
+    padding: 4px 0px 0px 4px;
+}
+
+.icon2 {
+    padding: 4px 0px 0px 4px;
+}
+
+.name {
+    margin-left: 150px;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    margin-top: -64px;
+    margin-bottom: 20px;
+}
+
+.details {
+    background-color: rgb(14, 13, 13);
+    color: rgb(248, 248, 208);
+    margin-top: 30px;
+    text-align: center;
+    padding: 80px;
+}
+
+.details h2 {
+    margin-bottom: 12px;
+}
+
+.card-body {
+    background: rgb(14, 13, 13);
+}
+
+.teacher {
+    background-color: rgb(243, 177, 55);
+    color: white;
+    height: 34px;
+    width: 50px;
+    font-size: larger;
+    margin-left: 100px;
+}
+
+.student {
+    background-color: rgb(243, 177, 55);
+    color: white;
+    height: 34px;
+    width: 50px;
+    font-size: larger;
+    margin-left: 100px;
+}
+
+.branch {
+    background-color: rgb(243, 177, 55);
+    color: white;
+    height: 34px;
+    width: 50px;
+    font-size: larger;
+    margin-left: 100px;
+}
+
+.card {
+    border: 1.5px solid orange;
+    border-radius: 3px;
+    transform: rotate('10');
+}
+
+.why {
+    text-align: center;
+    margin-top: 60px;
+}
+
+.couz {
+    margin-top: 110px;
+}
+
+.decade i {
+    background-color: rgb(243, 177, 55);
+    color: white;
+    height: 4.5rem;
+    width: 5.5rem;
+    font-size: 3rem;
+    margin-bottom: 15px;
+    border: 1.5px solid rgb(245, 229, 209);
+}
+.decade:hover i{
+    transform: scale(1.2);
 }
