--- a/style.css
+++ b/style.css
@@ -365,3 +365,9 @@
 .cnt:hover{
     color: rgb(240, 186, 86);
 }
+.map{
+    margin-left: 40px; margin-top:-30px
+}
+.copyright{
+    background-color: grey; text-align: center; color: rgb(221, 212, 212); padding: 5px;
+}
