--- a/style.css
+++ b/style.css
@@ -369,5 +369,11 @@
     margin-left: 40px; margin-top:-30px
 }
 .copyright{
-    background-color: grey; text-align: center; color: rgb(221, 212, 212); padding: 5px;
+    background-color: grey;  color: rgb(221, 212, 212); padding: 5px; 
+}
+.copyright span{
+    margin-left: 750px; color: rgb(221, 212, 212);
+}
+.copyright span a {
+    color:rgb(221, 212, 212);
 }
