--- a/footer.css
+++ b/footer.css
@@ -26,13 +26,16 @@
 .num i{
     font-size: 18px; padding: 3px 0px 0px 10px
 }
-.hme{
-    color: rgb(153, 148, 148); font-weight: 100; font-size: 15px; margin-top: 20px; 
+.hme a{
+    color: rgb(153, 148, 148); font-weight: 100; font-size: 15px; 
 }
 .hme i{
-    font-size: 18px; padding: 3px 0px 0px 15px
+    font-size: 18px; padding: 3px 0px 0px 15px; color: rgb(153, 148, 148)
 }
-.hme:hover{
+.hme:hover a{
+    text-decoration: none; color:rgb(240, 186, 86); ;
+ }
+.hme:hover i{
     color: rgb(240, 186, 86);
 }
 
