--- a/back.css
+++ b/back.css
@@ -1,5 +1,5 @@
 .bckimage {
-    background-image: url(./photos/schoolimg1.jpg);
+    background-image: url(./photos/gate.jpeg);
     background-repeat: no-repeat;
     color:white;
     background-size:cover ;
