--- a/footer.css
+++ b/footer.css
@@ -1,82 +1,91 @@
-
 .footer{
-    background-color: black;color: white;  margin-top: 50px;
+    background-color: black;color: white;  margin-top: 50px; 
 }
 .foot1{
-    padding: 70px; font-weight: 600; font-size: 15px;
+   padding: 70px; font-weight: 600; font-size: 15px;
 }
 .foot2{
-    padding: 70px; font-weight: 600; font-size: 18px;
+   padding: 70px; font-weight: 600; font-size: 18px;
 }
 .line{
-    color: orange; font-weight: 800;
+   color: orange; font-weight: 800;
 }
 .foot3{
-    padding: 70px; font-weight: 600; font-size: 18px;
+    padding: 70px; font-weight: 600; font-size: 18px; 
 }
 .add{
-    color: rgb(153, 148, 148); font-weight: 100; font-size: 15px; margin-top: 20px;
+   color: rgb(153, 148, 148); font-weight: 100; font-size: 15px; margin-top: 20px;
 }
 .add i{
-    font-size: 15px; padding: 10px; 
+   font-size: 15px; padding: 10px; 
 }
 .num{
-    color: rgb(153, 148, 148); font-weight: 100; font-size: 15px; margin-top: 20px;
+   color: rgb(153, 148, 148); font-weight: 100; font-size: 15px; margin-top: 20px;
 }
 .num i{
-    font-size: 18px; padding: 3px 0px 0px 10px
+   font-size: 18px; padding: 3px 0px 0px 10px;
+}
+.hme{
+   margin-top: 20px;
 }
 .hme a{
-    color: rgb(153, 148, 148); font-weight: 100; font-size: 15px; 
+    color: rgb(153, 148, 148); font-weight: 100; font-size: 15px
 }
 .hme i{
-    font-size: 18px; padding: 3px 0px 0px 15px; color: rgb(153, 148, 148)
+   font-size: 18px; padding: 3px 0px 0px 15px; color: rgb(153, 148, 148)
 }
 .hme:hover a{
-    text-decoration: none; color:rgb(240, 186, 86); ;
- }
+  text-decoration: none; color:rgb(240, 186, 86); ;
+}
 .hme:hover i{
     color: rgb(240, 186, 86);
 }
 
-.tc{
-    color: rgb(153, 148, 148); font-weight: 100; font-size: 15px; margin-top: 20px; 
+.tc a{
+   color: rgb(153, 148, 148); font-weight: 100; font-size: 15px; margin-top: 20px; 
 }
 .tc i{
-    font-size: 18px; padding: 3px 0px 0px 15px
+   font-size: 18px; padding: 3px 0px 0px 15px
 }
-.tc:hover{
-    color: rgb(240, 186, 86) ;
+.tc:hover a{
+   color: rgb(240, 186, 86) ;
 }
-
+.tc:hover i{
+   color: rgb(240, 186, 86) ;
+}
 .abt{
-    color: rgb(153, 148, 148); font-weight: 100; font-size: 15px; margin-top: 20px; 
+   margin-top: 5px;
+}
+.abt a{
+   color: rgb(153, 148, 148); font-weight: 100; font-size: 15px; margin-top: 20px; 
 }
 .abt i{
-    font-size: 18px; padding: 3px 0px 0px 15px  
+   font-size: 18px; padding: 3px 0px 0px 15px  ; color: rgb(153, 148, 148)
 }
-.abt:hover{
-    color: rgb(240, 186, 86) ;
+.abt:hover a{
+   text-decoration: none; color: rgb(240, 186, 86) ;
 }
+.abt:hover i{    color: rgb(240, 186, 86) ;
 
+}
 .cnt{
-    color: rgb(153, 148, 148); font-weight: 100; font-size: 15px; margin-top: 20px; 
+   margin-top: 5px;
+}
+.cnt a{
+   color: rgb(153, 148, 148); font-weight: 100; font-size: 15px; margin-top: 20px; 
 }
 .cnt i{  
-    font-size: 18px; padding: 3px 0px 0px 15px 
+   font-size: 18px; padding: 3px 0px 0px 15px ; color: rgb(153, 148, 148)
 }
-.cnt:hover{
-    color: rgb(240, 186, 86);
+.cnt:hover a{
+   text-decoration: none; color: rgb(240, 186, 86);
+}
+.cnt:hover i{
+   color: rgb(240, 186, 86);
 }
 .map{
-    margin-left: 40px; margin-top:-30px
+   margin-left: 40px; margin-top:-30px
 }
-.copyright{
-    background-color: grey;  color: rgb(221, 212, 212); padding: 5px; 
-}
-.copyright span{
-    margin-left: 750px; color: rgb(221, 212, 212);
-}
-.copyright span a {
-    color:rgb(221, 212, 212);
+.copy{
+   background-color: rgb(163, 159, 159); color: beige;
 }
